@@ -1,0 +1,13 @@
+package com.stickycoding.Rokon;
+
+/**
+ * @author Richard
+ * The superclass for all modifiers to a particle - that give various effects
+ */
+public class ParticleModifier {
+
+	public void onUpdate(Particle particle) {
+		
+	}
+	
+}
